# sputnikvm

./: 3  Cargo.toml
core/: Cargo.toml
core/src/: lib.rs  memory.rs  opcode.rs  stack.rs  utils.rs  valids.rs
core/src/eval/: macros.rs  misc.rs  mod.rs
eltypes/: Cargo.toml
eltypes/src/: lib.rs
evm-types/: Cargo.toml
evm-types/src/: events.rs  lib.rs  storage.rs
gasometer/: Cargo.toml
gasometer/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: handler.rs  interrupt.rs  lib.rs
runtime/src/eval/: mod.rs  system.rs
src/: lib.rs
src/backend/: memory.rs  mod.rs
src/executor/stack/: executor.rs  memory.rs
