[package]
name = "evm-types"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[dependencies]
primitive-types = { version = "0.12.1", default-features = false, features = ["rlp"] }
hex = { version = "=0.4.0", default-features = false }


[dependencies.multiversx-sc]
version = "0.39.5"

[dev-dependencies]
mx-sc-debug = { path= "../../elrond-wasm-rs/framework/debug", version = "0.38.0" }
